# Camera

./: .gitignore  .uv.toml  CLAUDE.md  Demo.py  Distortion_CorrectionV1.py  Distortion_CorrectionV2.py  Distortion_CorrectionV3_Fisheye.py  Distortion_CorrectionV4_Fisheye.py  Exposure_Sweep_Script.py  Find_Camera.py  Focus.py  GUI_IMX708_Dirsotion_Correction.py  GUI_IMX708_Dirsotion_Correction_v1.1.py  GUI_IMX708_Dirsotion_Correction_v1.2.py  GUI_IMX708_Qt_Complete.py  GUI_IMX708_Safe_Preview.py  Image.py  README_Qt_Fixes.md  README_UV.md  crop_and_resize_tool.py  debug_camera_controls.py  distortion_coefficients_dual.json  errors  image_post_processing_v1.1.py  image_post_processing_v1.3.py  macro_capture.py  pyproject.toml  requirements.txt  setup_qt5_rpi.sh  setup_qt_rpi.sh  simple_dual_camera_gui.py  simple_dual_camera_gui_pyqt.py  simple_opencv_camera_viewer.py  test_autofocus_detection.py  test_raspberry_pi_debug.py
CamEnv/: pyvenv.cfg
debugging/: DEBUGGING.md  GUI_IMX708_NoPreview_v1.4.py  GUI_IMX708_Safe_v1.3.py  GUI_test_no_preview.py  camera_settings.json  debug_camera_mock.py  test_gui_minimal.py  test_imashow.py
evk_sdk/include/arducam/: ArducamCamera.hpp  arducam_evk_sdk.h  structs.h  values.h  version.h
evk_sdk/lib/: arducam_evk_cpp_sdk.lib  arducam_evk_sdk.lib
evk_sdk/lib/cmake/arducam_evk_cpp_sdk/: arducam_evk_cpp_sdkConfig.cmake  arducam_evk_cpp_sdkConfigVersion.cmake  arducam_evk_cpp_sdkTargets-release.cmake  arducam_evk_cpp_sdkTargets.cmake
evk_sdk/lib/cmake/arducam_evk_sdk/: arducam_evk_sdkConfig.cmake  arducam_evk_sdkTargets-release.cmake  arducam_evk_sdkTargets.cmake
